--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   },
   "devDependencies": {
     "ansi-yellow": "^0.1.1",
-    "glob": "^6.0.1",
+    "glob": "^7.0.3",
     "gulp-format-md": "^0.1.8",
-    "mocha": "*"
+    "mocha": "^2.4.5"
   },
   "keywords": [
     "cache",
